<resources>
    <string name="app_name">Gestor de Perfumaria</string>
    <string name="label_register">Cadastro</string>
    <string name="label_search">Pesquisar</string>
    <string name="label_profits">Acompanhe seus lucros</string>
    <string name="label_rules">Regras</string>
    <string name="label_brand">Marca</string>
    <string name="label_cosmetic">Cosmético</string>
    <string name="label_name_brand">Nome da marca</string>
    <string name="label_profit_value">Lucro(%)</string>
    <string name="label_name_cosmetic">Nome do cosmético</string>
    <string name="label_price">Preço(R$)</string>
    <string name="label_select_type_transaction">Selecione o tipo de transação</string>
    <string name="label_purchase">Compra</string>
    <string name="label_sale">Venda</string>
    <string name="label_to_register">Cadastrar</string>
    <string name="title_rules">Regras</string>
    <string name="paragraph_one_rules">Um cosmético só pode ser cadastrado se houver pelo menos uma marca cadastrada.</string>
    <string name="paragraph_two_rules">Uma marca somente pode ser deletada se não houver nenhum cosmético cadastrado dessa marca.</string>
    <string name="paragraph_tree_rules">Somente serão salvos, os registros de cosméticos cadastradados no último ano, transações de cosméticos registrados com data anterior ao último ano serão deletadas automaticamente.</string>
    <string name="title_usage_tips">Dicas de uso</string>
    <string name="paragraph_one_usage_tips">Para exibir todas as marcas ou todos os cosméticos, faça uma pesquisa por nome e não digite nada no campo de pesquisa, apenas clique no botão de pesquisar.</string>
    <string name="label_to_search">Pesquisar</string>
    <string name="label_date_initial">Início (dd/mm/aaaa)</string>
    <string name="label_date_final">Fim (dd/mm/aaaa)</string>
    <string name="label_by_name">Por Nome</string>
    <string name="label_by_brand">Por Marca</string>
    <string name="label_by_date">Por Data</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_save">Salvar</string>
    <string name="label_show_profits">Lucros: </string>
    <string name="label_show_expenses">Despesas: </string>
    <string name="label_show_balance">Saldo: </string>
    <string name="label_spinner">Selecione a marca</string>
    <string name="dialog_edit_cosmetic">Editar Cosmético</string>
    <string name="toast_write_name_cosmetic">Digite um nome para o cosmético.</string>
    <string name="toast_write_price_cosmetic">Digite um preço válido para o cosmético.</string>
    <string name="toast_dont_delete_brand">Não é possível excluir a marca selecionada, pois existem cosméticos cadastrados dessa marca!</string>
    <string name="dialog_edit_brand">Editar Marca</string>
    <string name="toast_write_name_brand">Digite um nome para a marca.</string>
    <string name="toast_write_profit_brand">Digite um número válido para o lucro da marca.</string>
    <string name="money">R$</string>
    <string name="title_profit">Lucro</string>
    <string name="title_prejudice">Prejuízo</string>
    <string name="month_1">Janeiro</string>
    <string name="month_2">Fevereiro</string>
    <string name="month_3">Março</string>
    <string name="month_4">Abril</string>
    <string name="month_5">Maio</string>
    <string name="month_6">Junho</string>
    <string name="month_7">Julho</string>
    <string name="month_8">Agosto</string>
    <string name="month_9">Setembro</string>
    <string name="month_10">Outubro</string>
    <string name="month_11">Novembro</string>
    <string name="month_12">Dezembro</string>
    <string name="toast_select_brand_to_search">Selecione uma marca para pesquisar.</string>
    <string name="toast_brand_not_found">Não foi possível encontrar a marca pesquisada, tente novamente.</string>
    <string name="toast_cosmetic_not_found">Não foi possível encontrar o cosmético pesquisado, tente novamente.</string>
    <string name="toast_date">A data inicial deve anteceder ou ser igual à data final.</string>
    <string name="toast_write_dates">Digite as datas inicial e final para realizar a pesquisa.</string>
    <string name="toast_exist_brand_name">Já existe uma marca cadastrada com esse nome, tente outro nome.</string>
    <string name="toast_register_or_select_brand">Selecione uma marca, se não houver, faça o cadastro de pelo menos uma marca para poder cadastrar um cosmético.</string>
    <string name="toast_brand_register_success">Marca cadastrada com sucesso!</string>
    <string name="toast_cosmetic_register_success">Cosmético cadastrado com sucesso!</string>
    <string name="DATABASE_NAME">db-perfumery</string>
    <string name="delete">Tem certeza que deseja deletar esse item?</string>
    <string name="sim">Sim</string>
    <string name="não">Não</string>

</resources>