<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:backgroundTint="@color/light_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/edit_text_profit_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/dark_purple"
        android:textSize="23sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"
        >

        <Button
            android:id="@+id/delete_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/não"
            android:textColor="@color/dark_purple"
            android:backgroundTint="@color/yellow"/>

        <Button
            android:id="@+id/delete_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sim"
            android:textColor="@color/white"
            android:backgroundTint="@color/pink_red"/>

    </LinearLayout>

</LinearLayout>