<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".activities.SearchActivity">

    <EditText
        android:layout_marginStart="10dp"
        android:layout_marginVertical="10dp"
        android:id="@+id/text_search"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_to_search"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="@color/dark_purple"
        />

    <EditText
        android:layout_marginStart="10dp"
        android:layout_marginVertical="10dp"
        android:id="@+id/date_initial"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_date_initial"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/date_final"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:textColorHint="@color/dark_purple"
        />

    <EditText
        android:layout_marginStart="10dp"
        android:layout_marginVertical="10dp"
        android:id="@+id/date_final"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_date_final"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toEndOf="@id/date_initial"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:textColorHint="@color/dark_purple"
        />

    <Spinner
        android:visibility="invisible"
        android:id="@+id/brands_spinner"
        android:layout_width="350dp"
        android:spinnerMode="dropdown"
        android:layout_marginVertical="10sp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideInset"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/btn_search"
        android:layout_width="50dp"
        android:layout_height="47dp"
        android:src="@drawable/baseline_search_24"
        app:layout_constraintStart_toEndOf="@+id/text_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/light_gray"
        android:layout_marginVertical="10dp"
        android:contentDescription="@string/label_to_search" />

    <RadioGroup
        android:layout_gravity="center_horizontal"
        android:id="@+id/radio_brand_cosmetic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_brand"
            android:textSize="18sp"
            android:checked="true"
            android:paddingHorizontal="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:buttonTint="@color/light_pink"

            />
        <RadioButton android:id="@+id/cosmetic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cosmetic"
            android:textSize="18sp"
            android:checked="false"
            android:paddingHorizontal="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:buttonTint="@color/light_pink"
            />
    </RadioGroup>

    <RadioGroup
        android:layout_gravity="center_horizontal"
        android:id="@+id/radio_date_name_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/radio_brand_cosmetic"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">
        <RadioButton android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_by_name"
            android:textSize="15sp"
            android:checked="true"
            android:paddingHorizontal="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:buttonTint="@color/light_pink"
            />

        <RadioButton android:id="@+id/for_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_by_brand"
            android:textSize="15sp"
            android:checked="false"
            android:paddingHorizontal="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:buttonTint="@color/light_pink"
            />

        <RadioButton android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_by_date"
            android:textSize="15sp"
            android:checked="false"
            android:paddingHorizontal="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:buttonTint="@color/light_pink"
            />
    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/radio_date_name_brand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/rv"
            />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>